--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿
 @using System.Web.Optimization
+@using DH.Helpdesk.Common.Enums
 @using DH.Helpdesk.Dal.Enums
 @using DH.Helpdesk.Web.Enums.Changes
 @model DH.Helpdesk.Web.Models.Changes.IndexModel
