--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogFiles.cshtml
@@ -60,19 +60,25 @@
                             <input type="hidden" id="logfile_id" value="@fileModel.Id" />
                             @if (fileModel.IsExistCaseFile && fileModel.ObjId.HasValue)
                             {
-                                <a target="_blank" class="isExisted" href="@BuildCaseFileLinkVD(fileModel.Name)"><i class="icon- attachedFile"></i>@fileModel.Name</a>
+                                <a target="_blank" class="isExisted" 
+                                   onclick="window.dhHelpdesk.logFileAccess(@Model.CaseId, '@fileModel.Name', @((int)CaseFileType.CaseFile))" 
+                                   href="@BuildCaseFileLinkVD(fileModel.Name)"><i class="icon- attachedFile"></i>@fileModel.Name</a>
                             }
                             else
                             {
                                 if (fileModel.IsExistLogFile && fileModel.ObjId.HasValue)
                                 {
-                                    <a target="_blank" class="isExisted" href="@BuildLogFileLinkVD(fileModel.ObjId.Value, fileModel.Name, fileModel.LogType)"><i class="icon- attachedFile"></i> @fileModel.Name</a>
+                                    <a target="_blank" class="isExisted"
+                                       onclick="window.dhHelpdesk.logFileAccess(@Model.CaseId, '@fileModel.Name', @(fileModel.LogType == LogFileType.Internal ? (int)CaseFileType.LogInternal : (int)CaseFileType.LogExternal), @fileModel.ObjId.Value)"
+                                       href="@BuildLogFileLinkVD(fileModel.ObjId.Value, fileModel.Name, fileModel.LogType)"><i class="icon- attachedFile"></i> @fileModel.Name</a>
                                 }
                                 else
                                 {
                                     if (Model.UseVirtualDirectory)
                                     {
-                                        <a target="_blank" href="@BuildLogFileLinkVD(Model.LogId.ToInt(), fileModel.Name, fileModel.LogType)"
+                                        <a target="_blank"
+                                           onclick="window.dhHelpdesk.logFileAccess(@Model.CaseId, '@fileModel.Name', @(fileModel.LogType == LogFileType.Internal ? (int)CaseFileType.LogInternal : (int)CaseFileType.LogExternal), @Model.LogId)"
+                                           href="@BuildLogFileLinkVD(Model.LogId.ToInt(), fileModel.Name, fileModel.LogType)"
                                            data-toggle="tooltip" rel="tooltip" data-placement="top" title="@(GetLogTypeText(fileModel.LogType))"><i class="@(GetFileIcon(fileModel.LogType))"></i> @fileModel.Name</a>
                                     }
                                     else
