--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/_FilesViewLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/_FilesViewLog.cshtml
@@ -8,62 +8,73 @@
         <div class="span12">
             @using (Html.BeginForm(null, null, null, FormMethod.Post, new { id = "fileViewLogForm", @action = "", texttypeid = 0, compareMethod = 1 }))
             {
-                <table class="tableform">
+                <table class="tableform" style="width: auto">
                     <tbody>
-                    <tr>
-                        <td class="span3">@Translation.GetCoreTextTranslation("Kund")</td>
-                        <td class="span9">
-                            @Html.DropDownListFor(x => x.SelectedCustomerId, Model.Customers, "",
-                                new
-                                {
-                                    id = "fvl_customerId",
-                                    @class = "chosen-single-select"
-                                })
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="span3">
-                            @Translation.GetCoreTextTranslation("Avdelning")
-                        </td>
-                        <td class="span9">
-                            @Html.DropDownListFor(m => m.SelectedDepartmetsIds, Model.Departments,
-                                new
-                                {
-                                    id = "fvl_lstFilterDepartments",
-                                    multiple = "multiple",
-                                    @class = "chosen-select",
-                                    placeholder = Translation.GetCoreTextTranslation("Välj en eller flera"),
-                                    style = "width: 300px"
-                                })
-                            <i id="departmentsLoader" class="gif-loader" style="display: none">&nbsp;</i>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="span3">
-                            @Translation.GetCoreTextTranslation("Period")
-                        </td>
-                        <td class="span9">
-                            @Html.EditorFor(m => m.PeriodFrom, "DatePicker", new { id = "fvl_periodFrom", type = "text" })
-                            @Html.EditorFor(m => m.PeriodTo, "DatePicker", new { id = "fvl_periodTo", type = "text" })
-                            <div id="datesErrorLabel" errorFor="PeriodFrom PeriodTo"></div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="span3">
-                            @Translation.GetCoreTextTranslation("Visa")
-                        </td>
-                        <td class="span9">
-                            @Html.TextBoxFor(m => m.Amount, new { id = "fvl_logsAmount", maxlength="3", @class = "inputw50" })
-                            @Translation.GetCoreTextTranslation("poster per sida")
-                            <div id="logsAmountError" errorFor="fvl_logsAmount"></div>
-                        </td>
-                    </tr>
+                        <tr>
+                            <td class="span3">@Translation.GetCoreTextTranslation("Kund")</td>
+                            <td class="">
+                                @Html.DropDownListFor(x => x.SelectedCustomerId, Model.Customers, "",
+                                    new
+                                    {
+                                        id = "fvl_customerId",
+                                        @class = "chosen-single-select"
+                                    })
+                            </td>
+                            <td><div id="fvl_customerIdError" errorFor="fvl_customerId"></div></td>
+                        </tr>
+                        <tr>
+                            <td class="span3">
+                                @Translation.GetCoreTextTranslation("Avdelning")
+                            </td>
+                            <td class="">
+                                @Html.DropDownListFor(m => m.SelectedDepartmetsIds, Model.Departments,
+                                    new
+                                    {
+                                        id = "fvl_lstFilterDepartments",
+                                        multiple = "multiple",
+                                        @class = "chosen-select",
+                                        placeholder = Translation.GetCoreTextTranslation("Välj en eller flera"),
+                                        style = "width: 300px"
+                                    })
+                            </td>
+                            <td>
+                                <i id="departmentsLoader" class="gif-loader" style="display: none">&nbsp;</i>
+                                <div id="lstFilterDepartmentsError" errorFor="fvl_lstFilterDepartments"></div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="span3">
+                                @Translation.GetCoreTextTranslation("Period")
+                            </td>
+                            <td class="">
+                                @Html.EditorFor(m => m.PeriodFrom, "DatePicker", new { id = "fvl_periodFrom", type = "text" })
+                                @Html.EditorFor(m => m.PeriodTo, "DatePicker", new { id = "fvl_periodTo", type = "text" })
+                            </td>
+                            <td><div id="datesErrorLabel" errorFor="PeriodFrom PeriodTo"></div></td>
+                        </tr>
+                        <tr>
+                            <td class="span3">
+                                @Translation.GetCoreTextTranslation("Visa")
+                            </td>
+                            <td class="">
+                                @Html.TextBoxFor(m => m.Amount, new { id = "fvl_logsAmount", maxlength = "3", @class = "inputw50" })
+                                @Translation.GetCoreTextTranslation("poster per sida")
+                                <span style="float: right">
+                                    <button class="btn" id="logFilesRunBtn">@Translation.GetCoreTextTranslation("Sök")</button>
+                                </span>
+                                
+                            </td>
+                            <td>
+                                <i id="logFilesInProcessLoader" class="gif-loader" style="display: none">&nbsp;</i>
+                                <div id="logsAmountError" errorFor="fvl_logsAmount"></div>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             }
         </div>
     </div>
-    
+
     <div class="row">
         <div class="span100">
             <table class="table table-striped table-bordered table-hover table-cases" id="fvl_Table">
@@ -76,11 +87,11 @@
                         <th class="" sortField="@FileViewLogSortFields.ProductArea">@Translation.GetCoreTextTranslation("Produktområde")</th>
                         <th class="" sortField="@FileViewLogSortFields.File">@Translation.GetCoreTextTranslation("Fil")</th>
                         <th class="" sortField="@FileViewLogSortFields.Path">@Translation.GetCoreTextTranslation("Sökväg katalog")</th>
-                        <th class="" sortField="@FileViewLogSortFields.Operation">@Translation.GetCoreTextTranslation("Drift")</th>
+                        <th class="" sortField="@FileViewLogSortFields.Operation">@Translation.GetCoreTextTranslation("Händelse")</th>
+                        <th class="" sortField="@FileViewLogSortFields.Source">@Translation.GetCoreTextTranslation("Applikation")</th>
                     </tr>
                 </thead>
-                <tbody id="fvl_Table_rows">
-                </tbody>
+                <tbody id="fvl_Table_rows"></tbody>
             </table>
         </div>
     </div>
@@ -100,8 +111,8 @@
                 DepartmentsRequired: '@Translation.GetForJS("Avdelning") @Translation.GetForJS("måste anges")',
                 InvalidDateRange: '@Translation.GetForJS("Valt datumintervall är ogiltigt")'
             },
-            sortBy: '@FileViewLogSortFields.Department',
-            sortOrder: 0
+            sortBy: '@FileViewLogSortFields.Date',
+            sortOrder: 1
         }
         window.fileViewLogForm = new FileViewLog();
         window.fileViewLogForm.init(settings);
