--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -3644,6 +3644,10 @@ a.inactive {
 
 /********CASEOVERVIEW SEARCH CASES STATUS********/
 
+.file-view-logs .date input {
+    width: 113px;
+}
+
 .caseoverviewaccordion.accordion, .caseoverviewaccordion .accordion {
     margin-bottom: 0;
 }
