--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
@@ -68,7 +68,7 @@
                                 {
                                     <tr>
                                         <td>
-                                            <a style="color: blue" href="@Url.Action("DownloadFile", new RouteValueDictionary {{"id", Model.CasePreview.Id}, {"fileName", file.FileName}})"><i class="icon-file"></i>@file.FileName</a>
+                                            <a style="color: blue" href="@Url.Action("DownloadFile", "CaseFiles", new RouteValueDictionary {{"id", Model.CasePreview.Id}, {"fileName", file.FileName}})"><i class="icon-file"></i>@file.FileName</a>
                                         </td>
                                     </tr>
                                 }
