--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/OrganizationFieldsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/OrganizationFieldsViewModel.cshtml
@@ -4,7 +4,7 @@
         || Model.OrganizationFieldsModel.DomainId.Show
         || Model.OrganizationFieldsModel.UnitId.Show)
 {
-    <h4>@Translation.Get("Organisation")</h4>
+    <h4>@Translation.GetCoreTextTranslation("Organisation")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
