[Fix] #76072 Changed the editor limit for this specific page to 4000 (globally set to 2000)

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/BulletinBoard/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/BulletinBoard/_Input.cshtml
@@ -7,6 +7,15 @@
         @Translation.Get("som används går inte att ta bort", Enums.TranslationSource.TextTranslation)
     </div>    
 }
+
+<script language="javascript">
+    $(function () {
+        tinymce.on('addeditor', function (event) {
+            var editor = event.editor;
+            editor.settings.maxLength = 4000;
+        }, true);
+    });
+</script>
 <div class="bulletinboard content">
     <div class="container">
         <ul class="nav nav-tabs" id="myTab">
