--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Index.cshtml
@@ -10,11 +10,11 @@
         @if (Model.UserHasInventoryAdminPermission)
         {
             <li>
-                @Html.ActionLink(Translation.Get("Ny arbetsstation"), "New", "Workstaion", new { @class = "btn" })
+                @Html.ActionLink(Translation.Get("Ny arbetsstation"), "New", null, new { @class = "btn" })
             </li>
         }
         <li>
-            @Html.ActionLink(Translation.Get("Excel"), "ExportGridToExcelFile", "Workstaion", new { @class = "btn", id = "excel_report_inventory_button" })
+            @Html.ActionLink(Translation.Get("Excel"), "ExportGridToExcelFile", null, new { @class = "btn", id = "excel_report_inventory_button" })
         </li>
     </ul>
 }
