--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Workstations.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Workstations.cshtml
@@ -23,7 +23,7 @@
     @Html.HiddenFor(m => m.Filter.SortField.Name, new { id = "sortFieldName" })
     @Html.HiddenFor(m => m.Filter.SortField.SortBy, new { id = "sortFieldBy" })
 
-<div class="expanded-search-content">    
+<div class="expanded-search-content" style="display: none">    
     <table class="tableform">
         @if (Model.Settings.DepartmnetFieldSetting.IsShow)
         {
